move into blog, add actions workflow

--- a/blog/config.toml
+++ b/blog/config.toml
@@ -2,6 +2,7 @@ baseURL = ""
 languageCode = "en-us"
 title = "T++"
 enableInlineShortcodes = true
+RelativeURLs=true
 paginate = 3
 
 theme = "casper3"
