--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/casper3"]
-	path = themes/casper3
+[submodule "blog/themes/casper3"]
+	path = blog/themes/casper3
 	url = https://github.com/jonathanjanssens/hugo-casper3.git
