--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,5 +34,5 @@ jobs:
           emptyCommits: false
         env:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./public
+          publish_dir: ./blog/public
           publish_branch: gh-pages
