--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,5 +33,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./public
+          publish_dir: ./blog/public
           publish_branch: gh-pages
