move baack to aws

--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -9,7 +9,7 @@ RUN wget "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hu
   rm -r hugo_${HUGO_VERSION}_Linux-64bit.tar.gz && \
   mv hugo /usr/bin
 
-COPY ./ /site
+COPY ./blog /site
 WORKDIR /site
 RUN hugo
 
