--- a/infrastructure/docker-compose.yaml
+++ b/infrastructure/docker-compose.yaml
@@ -1,12 +1,9 @@
 version: '3.7'
 services:
-  web:
-    container_name: web
-    build:
-      context: .
-      dockerfile: Dockerfile.local
-    command: hugo server -D --watch=true --bind 0.0.0.0
-    ports:
-      - 1313:1313
+  server:
+    image: klakegg/hugo:0.89.4
+    command: server
     volumes:
-      - ../blog:/web
+      - "../blog:/src"
+    ports:
+      - "1313:1313"
